--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,38 +8,102 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
     <title>Hefrog Marketplace</title>
 </head>
-<body>
-<!--ГЛАВНАЯ СТРАНИЦА-->
-<div class="wrapper">
-    <nav class="navbar">
-        <!--логотип-->
-        <div class="container">
-            <div class="logo"><img src="./assets/imgs/logo.png" alt="logo"></img></div>
-            <!--меню-->
-            <ul class="navbar-menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Smart RFQ</a></li>
-                <li><a href="#">Smart Contact</a></li>
-                <li><a href="#" class="get">Get Started</a></li>
-                <div class="iconss">
-                    <img src="./assets/imgs/lupa.png" alt="lupa" class="icons"></img>
-                    <img src="./assets/imgs/contact.png" alt="contact" class="icons"></img>
-                </div>
-            </ul>    
-            
-        </div>
-        <div class="bigtext">
-            <div class="text">
-                <p class="title">World’s First one-stop <span class="bold">unified Service and execution company</span></p>
-                <p class="opis">powering your purchase, Sales, and business</p>
-            </div>
-            <img src="./assets/imgs/Stepping up.png" alt="big man">
-        </div>
-    </nav>
-</div>
- 
 
+<body>
+    <!--ГЛАВНАЯ СТРАНИЦА-->
+    <div class="wrapper">
+        <nav class="navbar">
+            <!--логотип-->
+            <div class="container">
+                <div class="logo"><img src="./assets/imgs/logo.png" alt="logo"></img></div>
+                <!--меню-->
+                <ul class="navbar-menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Smart RFQ</a></li>
+                    <li><a href="#">Smart Contact</a></li>
+                    <li><a href="#" class="get">Get Started</a></li>
+                    <div class="iconss">
+                        <img src="./assets/imgs/lupa.png" alt="lupa" class="icons"></img>
+                        <img src="./assets/imgs/contact.png" alt="contact" class="icons"></img>
+                    </div>
+                </ul>
+
+            </div>
+            <div class="bigtext">
+                <div class="text">
+                    <p class="title">World’s First one-stop <span class="bold">unified Service and execution
+                            Company</span></p>
+                    <p class="opis">powering your purchase, Sales, and business</p>
+                </div>
+                <img src="./assets/imgs/Stepping up.png" alt="big man" class="bigman">
+            </div>
+        </nav>
+    </div>
+
+    <!--ANYTHING-->
+    <div class="container">
+
+        <div class="wrapper2">
+            <div class="bigtext">
+                <p class="title">Anything to anyone from anywhere</p>
+                <p class="opis">Get inspired while business with us</p>
+                <div class="line">
+                    <img src="/assets/imgs/line.png" alt="line">
+                </div>
+            </div>
+            <div class="pictures">
+                <div class="picture ptext">
+                    <img src="/assets/imgs/image 208.png" alt="lupa">
+                    <h2>Risk Intelligence</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                </div>
+                <div class="picture ptext">
+                    <img src="/assets/imgs/image 209.png" alt="oblako">
+                    <h2>Big data analytics</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                </div>
+                <div class="picture ptext">
+                    <img src="/assets/imgs/image 210.png" alt="papka">
+                    <h2>Sourcing Intelligence</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                </div>
+                <div class="picture ptext">
+                    <img src="/assets/imgs/image 211.png" alt="lampa">
+                    <h2>Smart procurement</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                </div>
+                <div class="picture ptext">
+                    <img src="/assets/imgs/image 212.png" alt="robot">
+                    <h2>Technological supports</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                </div>
+                <div class="picture ptext">
+                    <img src="/assets/imgs/image 213.png" alt="mir">
+                    <h2>C-Smart Marketing</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Search. Enormous. Easy. Recognize. Choose.-->
+    <div class="scontainer">
+        <div class="stext">
+            <h2>Search. Enormous. Easy. Recognize. Choose.</h2>
+            <p class="want">Want To Access Precise Products From Tailored Categories?</p>
+            <p class="al-driven">AI-driven categories award you exact products from massive collection.</p>
+
+        </div>
+        <div class="sbigblock">
+            <div class="search">
+
+            </div>
+            <div class="pictures">
+
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
