--- a/rfq.html
+++ b/rfq.html
@@ -47,7 +47,7 @@
                             <div class="slaider-rfq">
                                 <div class="line-1"></div>
                                 <div class="line-1"></div>
-                                <div class="line-1" id="line-3"></div>
+                                <div class="line-1"></div>
                                 <div class="line-1"></div>
                                 <div class="line-1"></div>
                             </div>
