3 блока готовы практически

--- a/index.html
+++ b/index.html
@@ -32,13 +32,26 @@
 
             </div>
             <div class="bigtext">
-                <div class="text">
-                    <p class="title">World’s First one-stop <span class="bold">unified Service and execution
+                <div class="blocks">
+                    <div class="text">
+                        <p class="title">World’s First one-stop <span class="bold">unified Service and execution
                             Company</span></p>
-                    <p class="opis">powering your purchase, Sales, and business</p>
+                        <p class="opis">powering your purchase, Sales, and business</p>
+                    </div>
+                    <img src="./assets/imgs/Stepping up.png" alt="big man" class="bigman">
                 </div>
-                <img src="./assets/imgs/Stepping up.png" alt="big man" class="bigman">
             </div>
+                <div class="slaider">
+                    <div class="rfq">
+                        <div class="line-1"></div>
+                        <div class="line-1"></div>
+                        <div class="line-1"></div>
+                        <div class="line-1"></div>
+                        <div class="line-1"></div>
+                    </div>
+                </div>
+
+
         </nav>
     </div>
 
@@ -94,13 +107,64 @@
             <p class="want">Want To Access Precise Products From Tailored Categories?</p>
             <p class="al-driven">AI-driven categories award you exact products from massive collection.</p>
 
+            <div class="ellipses">
+                <div class="ellipse">view all</div>
+            </div>
+
+            <div class="rectangles">
+                <div class="rectangle one">
+                    <img src="./assets/imgs/Vector1.png" alt="strelka1">
+                </div>
+                <div class="rectangle two">
+                    <img src="./assets/imgs/Vector2.png" alt="strelka2">
+                </div>
+            </div>
+
         </div>
         <div class="sbigblock">
             <div class="search">
-
+                <div class="rectagle one">
+                    <div class="text">
+                        <div class="category">
+                            <p>CATEGORY</p>
+                            <img src="./assets/imgs/down.png" alt="strelka down">
+                            <div class="palochka"></div>
+                        </div>
+                        <div class="searches">
+                            <p>SEARCH</p>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="rectagle two">
+                        <img src="./assets/imgs/lupaaa.png" alt="lupa2">
+                    </div>
             </div>
-            <div class="pictures">
 
+            <div class="spictures">
+                <div class="spicture">
+                    <div class="cart">
+                        <img src="./assets/imgs/Agrotechnologies.png" alt="Agrotechnologies">
+                        <p>Agriculture</p>
+                    </div>
+                    <div class="cart">
+                        <img src="./assets/imgs/Feeding%20dog.png" alt="Feeding dog">
+                        <p>Food and Feed</p>
+                    </div>
+                    <div class="cart">
+                        <img src="./assets/imgs/worker.png" alt="worker">
+                        <p>Minerals and </p>
+                    </div>
+<!--                        <div class="sl">-->
+<!--                        <div class="slaider rfq">-->
+<!--                            <div class="line-1"></div>-->
+<!--                            <div class="line-1"></div>-->
+<!--                            <div class="line-1"></div>-->
+<!--                            <div class="line-1"></div>-->
+<!--                            <div class="line-1"></div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+
+                </div>
             </div>
         </div>
     </div>
