--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Smart RFQ</a></li>
                     <li><a href="#">Smart Contact</a></li>
-                    <li><a href="#" class="get">Get Started</a></li>
+                    <li><a href="#" class="bottom">Get Started</a></li>
                     <div class="iconss">
                         <img src="./assets/imgs/lupa.png" alt="lupa" class="icons"></img>
                         <img src="./assets/imgs/contact.png" alt="contact" class="icons"></img>
@@ -31,25 +31,27 @@
                 </ul>
 
             </div>
-            <div class="bigtext">
-                <div class="blocks">
-                    <div class="text">
-                        <p class="title">World’s First one-stop <span class="bold">unified Service and execution
-                            Company</span></p>
-                        <p class="opis">powering your purchase, Sales, and business</p>
+
+
+            <div class="container-fat">
+                <div class="bigtext">
+                    <div class="blocks">
+                        <div class="text">
+                            <p class="title">World’s First one-stop <span class="bold">unified Service and execution
+                                    Company</span></p>
+                            <p class="opis">powering your purchase, Sales, and business</p>
+                        </div>
+                        <img src="./assets/imgs/Stepping up.png" alt="big man" class="bigman">
                     </div>
-                    <img src="./assets/imgs/Stepping up.png" alt="big man" class="bigman">
+                </div>
+                <div class="slaider-rfq">
+                    <div class="line-1"></div>
+                    <div class="line-1"></div>
+                    <div class="line-1"></div>
+                    <div class="line-1"></div>
+                    <div class="line-1"></div>
                 </div>
             </div>
-                <div class="slaider">
-                    <div class="rfq">
-                        <div class="line-1"></div>
-                        <div class="line-1"></div>
-                        <div class="line-1"></div>
-                        <div class="line-1"></div>
-                        <div class="line-1"></div>
-                    </div>
-                </div>
 
 
         </nav>
@@ -70,101 +72,167 @@
                 <div class="picture ptext">
                     <img src="/assets/imgs/image 208.png" alt="lupa">
                     <h2>Risk Intelligence</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolor</p>
                 </div>
                 <div class="picture ptext">
                     <img src="/assets/imgs/image 209.png" alt="oblako">
                     <h2>Big data analytics</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolor</p>
                 </div>
                 <div class="picture ptext">
                     <img src="/assets/imgs/image 210.png" alt="papka">
                     <h2>Sourcing Intelligence</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolor</p>
                 </div>
                 <div class="picture ptext">
                     <img src="/assets/imgs/image 211.png" alt="lampa">
                     <h2>Smart procurement</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolor</p>
                 </div>
                 <div class="picture ptext">
                     <img src="/assets/imgs/image 212.png" alt="robot">
                     <h2>Technological supports</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolor</p>
                 </div>
                 <div class="picture ptext">
                     <img src="/assets/imgs/image 213.png" alt="mir">
                     <h2>C-Smart Marketing</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolor</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolor</p>
                 </div>
             </div>
         </div>
     </div>
     <!--Search. Enormous. Easy. Recognize. Choose.-->
-    <div class="scontainer">
-        <div class="stext">
-            <h2>Search. Enormous. Easy. Recognize. Choose.</h2>
-            <p class="want">Want To Access Precise Products From Tailored Categories?</p>
-            <p class="al-driven">AI-driven categories award you exact products from massive collection.</p>
+    <div class="container-fat">
+        <div class="scontainer">
+            <div class="stext">
+                <h2>Search. Enormous. Easy. Recognize. Choose.</h2>
+                <p class="want">Want To Access Precise Products From Tailored Categories?</p>
+                <p class="al-driven">AI-driven categories award you exact products from massive collection.</p>
 
-            <div class="ellipses">
-                <div class="ellipse">view all</div>
-            </div>
-
-            <div class="rectangles">
-                <div class="rectangle one">
-                    <img src="./assets/imgs/Vector1.png" alt="strelka1">
+                <div class="ellipses">
+                    <div class="ellipse">view all</div>
                 </div>
-                <div class="rectangle two">
-                    <img src="./assets/imgs/Vector2.png" alt="strelka2">
-                </div>
-            </div>
 
-        </div>
-        <div class="sbigblock">
-            <div class="search">
-                <div class="rectagle one">
-                    <div class="text">
-                        <div class="category">
-                            <p>CATEGORY</p>
-                            <img src="./assets/imgs/down.png" alt="strelka down">
-                            <div class="palochka"></div>
-                        </div>
-                        <div class="searches">
-                            <p>SEARCH</p>
-                        </div>
+                <div class="rectangles">
+                    <div class="rectangle one">
+                        <img src="./assets/imgs/Vector1.png" alt="strelka1">
                     </div>
+                    <div class="rectangle two">
+                        <img src="./assets/imgs/Vector2.png" alt="strelka2">
+                    </div>
+                </div>
+
+            </div>
+            <div class="sbigblock">
+                <div class="search">
+                    <div class="rectagle one">
+                        <div class="text">
+                            <div class="category">
+                                <p>CATEGORY</p>
+                                <img src="./assets/imgs/down.png" alt="strelka down">
+                                <div class="palochka"></div>
+                            </div>
+                            <div class="searches">
+                                <p>SEARCH</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="rectagle two">
                         <img src="./assets/imgs/lupaaa.png" alt="lupa2">
                     </div>
-            </div>
+                </div>
 
-            <div class="spictures">
-                <div class="spicture">
-                    <div class="cart">
-                        <img src="./assets/imgs/Agrotechnologies.png" alt="Agrotechnologies">
-                        <p>Agriculture</p>
+                <div class="spictures">
+                    <div class="spicture">
+                        <div class="cart">
+                            <img src="./assets/imgs/Agrotechnologies.png" alt="Agrotechnologies">
+                            <p>Agriculture</p>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/imgs/Feeding%20dog.png" alt="Feeding dog">
+                            <p>Food and Feed</p>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/imgs/worker.png" alt="worker">
+                            <p>Minerals and </p>
+                        </div>
+
+
                     </div>
-                    <div class="cart">
-                        <img src="./assets/imgs/Feeding%20dog.png" alt="Feeding dog">
-                        <p>Food and Feed</p>
-                    </div>
-                    <div class="cart">
-                        <img src="./assets/imgs/worker.png" alt="worker">
-                        <p>Minerals and </p>
-                    </div>
-<!--                        <div class="sl">-->
-<!--                        <div class="slaider rfq">-->
-<!--                            <div class="line-1"></div>-->
-<!--                            <div class="line-1"></div>-->
-<!--                            <div class="line-1"></div>-->
-<!--                            <div class="line-1"></div>-->
-<!--                            <div class="line-1"></div>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                </div>
+                <div class="slaider-rfq">
+                    <div class="line-1"></div>
+                    <div class="line-1"></div>
+                    <div class="line-1"></div>
+                    <div class="line-1"></div>
+                    <div class="line-1"></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Smart RFQ -->
+
+    <div class="container-tight">
+        <div class="smart-container">
+            <div class="photo">
+                <img src="./assets/imgs/Recruiter with a magnifying glass is looking for new employees online.png"
+                    alt="Recruiter">
+            </div>
+            <div class="text-rfq">
+                <div class="smart-rfq">
+                    <h2 class="zagol">Smart RFQ</h2>
+                    <img class="three_line" src="./assets/imgs/3line.png" alt="3line">
+                    <img class="star_big" src="./assets/imgs/star 1.png" alt="star big">
+                    <img class="star_small" src="./assets/imgs/star 2.png" alt="star small">
+                    <p class="blue">Ready to think Smart about global procurement?</p>
+                    <p class="grey">We are innovative thinkers in global outsourcing. Our Smart Request for
+                        Quotation (RFQ)
+                        integrates
+                        blockchain technology and artificial intelligence to bring your requirement from anywhere.</p>
 
                 </div>
+                <div class="bottom-rfq">
+                    <p class="white">SIGN UP</p>
+                    <p class="readmore">Read More</p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- Step ahead to the new era of contract technology -->
+    <div class="container-tight">
+        <div class="step-container">
+            <div class="text-steps">
+                <div class="text-step">
+                    <h2 class="zagol">Step ahead to the new era of contract technology</h2>
+                    <img class="crown" src="./assets/imgs/crown.png" alt="crown">
+                    <img class="star small" src="./assets/imgs/star 2.png" alt="star small">
+                    <p class="blue">Ready to think Smart about global procurement?</p>
+                    <p class="blue">Forge ahead to the new era of the global contract with smart technologies.
+                    </p>
+                    <p class="grey">Smart RFQ integrated our unified analytics and blockchain smart contract technology to make your RFQ
+                        more powerful and three layer smart logical functionality brings verified and authenticated proposal
+                        against your RFQ.. signup (readmore)
+                    </p>
+                </div>
+                <div class="bottom-step">
+                    <p class="white">READ MORE</p>
+                </div>
+            </div>
+            
+            <div class="photo">
+                <img src="./assets/imgs/Woman work.png" alt="Woman">
             </div>
         </div>
     </div>
