--- a/smart.html
+++ b/smart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>SMART</title>
     <link rel="stylesheet" href="./assets/styles/smart.css">
 </head>
+
 <body>
     <div class="section-main">
         <div class="container">
@@ -35,10 +37,10 @@
                     <h3>gateway for digital and safe global <br>procurement, supply and business <br>integrations</h3>
                     <button>CONTACT US</button>
                 </div>
-                    <div class="sect-img">
-                        <img class="im-1" src="./assets/imgs/smart/gradient.svg">
-                        <img class="im-2" src="./assets/imgs/smart/Transport of the future.svg">
-                    </div>
+                <div class="sect-img">
+                    <img class="im-1" src="./assets/imgs/smart/gradient.png">
+                    <img class="im-2" src="./assets/imgs/smart/Transport of the future.svg">
+                </div>
             </div>
             <div class="slaider-smart">
                 <div class="line-1"></div>
@@ -49,5 +51,154 @@
             </div>
         </div>
     </div>
+    <div class="section-future">
+        <div class="container">
+            <div class="title-fut">
+                <h1>Future of smart contract for your business</h1>
+                <p>Booming the new way of a business contract for end to end transactions</p>
+            </div>
+            <div class="desc-text">
+                <img src="./assets/imgs/smart/Growth.svg">
+                <div class="card-fut">
+                    <div class="card-1">
+                        <h4>Advanced distributed<br> ledger technology</h4>
+                        <p>provides high level secure data transfer,<br> asset transfer, real time tracking, machine
+                            <br>to
+                            machine interactions
+                        </p>
+                    </div>
+                    <div class="card-1">
+                        <h4>Integrations</h4>
+                        <p>advanced pipeline integration<br> technologies makes deal or business<br> even better and
+                            productive
+                            with <br>eliminating the major risks</p>
+                    </div>
+                    <div class="card-1">
+                        <h4>Trust</h4>
+                        <p>we bring more trust in global purchase<br> and sales with our supplier and buyer to<br> more
+                            transparency with high secure <br>transaction</p>
+                    </div>
+                    <div class="card-1">
+                        <h4>Standardization</h4>
+                        <p>we involves continuous research and <br> development increase the level of standard<br> and
+                            security
+                            in contracting, procurement, <br>and supply of domestics and internations <br>cross border
+                            import
+                            and export</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section-eval">
+        <div class="title-eval">
+            <h1>Evaluation in cross-border sales and purchase</h1>
+            <p>new era contract technology customized with hefgro platforms provides powerful pipeline services</p>
+        </div>
+        <div class="block-card">
+            <div class="card-2">
+                <img src="./assets/imgs/smart/image 228.svg" alt="earth">
+            </div>
+            <div class="text__card">
+                <h3>Sourcing and approval</h3>
+                <p> hefgro provides better choice options for supplier <br>and buyer to make products supply and
+                    purchase.<br> Better selections take place by users and<br> approval.</p>
+            </div>
+        </div>
+        <div class="block-card">
+            <div class="card-2">
+                <img src="./assets/imgs/smart/image 229.svg" alt="doc">
+            </div>
+            <div class="text__card">
+                <h3>Smart Contract</h3>
+                <p>start the smart contract with terms and‌<br> contract as a high level encrypted coding with<br>
+                    integrations of business partners such as <br>banking or financial groups, supply chain,<br> quality
+                    and
+                    inspections, customs and auditing<br> systems. With decentralised or customized by<br> users with
+                    encrypted.</p>
+            </div>
+        </div>
+        <div class="block-card">
+            <div class="card-2">
+                <img src="./assets/imgs/smart/image 230.svg" alt="geo">
+            </div>
+            <div class="text__card">
+                <h3>Smart Tracking</h3>
+                <p>advanced security system helps to<br> users or vendors easily find live tracking the business deal at
+                    real-time</p>
+            </div>
+        </div>
+        <div class="block-card">
+            <div class="card-2">
+                <img src="./assets/imgs/smart/image 231.svg" alt="money">
+            </div>
+            <div class="text__card">
+                <h3>Transaction & Delivery</h3>
+                <p>successful transaction will initiate with successful delivery of products or services to users
+                </p>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="section-gen">
+        <div class="container">
+            <div class="title-gen">
+                <h1>Gaining benefits our <br>customized smart contracts</h1>
+            </div>
+            <div class="block_card_gen">
+                <div class="card-3"><img src="./assets/imgs/smart/image 232.svg">
+                    <h3>Accuracy</h3>
+                    <p>smart contract system assures more<br> accuracy in date & time, cost and <br>terms and conditions </p>
+                </div>
+                <div class="card-3"><img src="./assets/imgs/smart/image 233.svg">
+                    <h3>Communication</h3>
+                    <p>better communications from all<br> parties transparency to make deal<br> more productively</p>
+                </div>
+                <div class="card-3"><img src="./assets/imgs/smart/image 234.svg">
+                    <h3>Confidence</h3>
+                    <p>focus the transparency in a system <br>involving parties with reality</p>
+                </div>
+                <div class="card-3"><img src="./assets/imgs/smart/image 235.svg">
+                    <h3>Efficiency</h3>
+                    <p>more efficiency and speed to initiate<br> the contract or business between the <br>parties with high
+                        standard productive<br> terms of functionality</p>
+                </div>
+                <div class="card-3"><img src="./assets/imgs/smart/image 236.svg">
+                    <h3>Transparency</h3>
+                    <p>more transparent in private involving <br>parties to deal progress monitoring <br>and commanding and
+                        advising in <br>real-time</p>
+                </div>
+                <div class="card-3"><img src="./assets/imgs/smart/image 237.svg">
+                    <h3>Security</h3>
+                    <p>multi layer encrypted security and<br> customized security standards preserve <br>the data transactions
+                        and progress to<br> suppliers and buyers to make risk-free<br> trading and business</p>
+                </div>
+                <div class="card-3"><img src="./assets/imgs/smart/image 238.svg">
+                    <h3>Saving:</h3>
+                    <p>mitigate the inventory costs, time <br>from assessing our smart contract<br> platforms, reduce the third
+                        party<br> costs, and technological hiring cost,<br> etc</p>
+                </div>
+                <div class="card-3"><img src="./assets/imgs/smart/image 239.svg">
+                    <h3>Eco-friendly</h3>
+                    <p>we encouraging more secure next <br>generation paperless transaction and <br>contract. It even reduces
+                        the <br>transactions and document processing <br>time between the parties or <br>countries of business.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section-touch">
+        <div class="container">
+            <div class="sect">
+                <div class="forms">
+
+                </div>
+                <div class="title-img">
+                    <h1>Touch with us more details </h1>
+                    <img src="">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
